--- a/CORDHOLDER/index.html
+++ b/CORDHOLDER/index.html
@@ -14,7 +14,7 @@
       <tbody><tr>
         <td>
           <h3> PERSONAL LOGO</h3>
-	<a href = "Logo/LogoReflection.html"> <img src="https://raw.githubusercontent.com/ohljp/ED1/master/LOGO/OhlLogoFin.jpg" ,="" width="70%"> <a/>
+	<a href = "Logo/LogoReflection.html"> <img src="LOGO/LogoFin.jpg" ,="" width="70%">  <a/>
             
         </td>
         <td>
