--- a/CORDHOLDER/index.html
+++ b/CORDHOLDER/index.html
@@ -20,7 +20,7 @@
         <td>
           <h3> PRESS-FIT BOX </h3>
 	<a href = "CORDHOLDER/MatchBoxCarReflection.html">
- <img src="https://raw.githubusercontent.com/ohljp/ED1/master/Press%20Fit%20Box/FinalBox.jpg" ,="" width="70%">
+ <img src="PressFitBox/FinalBox.jpg" ,="" width="70%">
         </td>
         <td>
           <h3> Match Box Car</h3>
