--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <tbody><tr>
         <td>
           <h3> PERSONAL LOGO</h3>
-	<a href = "Logo/LogoReflection.html"> <img src="https://raw.githubusercontent.com/ohljp/ED1/master/LOGO/OhlLogoFin.jpg" ,="" width="70%"> <a/>
+	<a href = "LOGO/OhlLogoFin.jpg" ,="" width="70%"> <a/>
             
         </td>
         <td>
@@ -32,7 +32,7 @@
         <td>
           <h3> CORD CATCHER </h3>
 	<a href = "CORDHOLDER/CordCatcherReflection.html">
-           <img src="https://raw.githubusercontent.com/ohljp/ED1/master/CORD%20HOLDER/FINAL%20RASTER%20AND%20CUT%20OBJECT.jpeg" ,="" width="70%">          
+           <img src="CORDHOLDER/FINAL%20RASTER%20AND%20CUT%20OBJECT.jpeg" ,="" width="70%">          
         </td>
         <td></td>
       </tr>
