--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <td>
           <h3> PRESS-FIT BOX </h3>
 	<a href = "PressFitBox/PressFitBoxReflection.html">
- <img src="https://raw.githubusercontent.com/ohljp/ED1/master/Press%20Fit%20Box/FinalBox.jpg" ,="" width="70%">
+ <img src="PressFitBox/FinalBox.jpg" ,="" width="70%">
         </td>
         <td>
           <h3> Match Box Car</h3>
 	<a href = "3DExtrusionCar/MatchBoxCarReflection.html">
-          <img src="https://raw.githubusercontent.com/ohljp/ED1/master/3D%20Extrusion%20Car/IMG_4060%202.jpeg" ,="" width="70%">
+          <img src="3DExtrusionCar/IMG_4060.jpeg" ,="" width="70%">
         </td>
       </tr>
       <tr>
