--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <tbody><tr>
         <td>
           <h3> PERSONAL LOGO</h3>
-	<a href = "LOGO/OhlLogoFin.jpg" ,="" width="70%"> <a/>
+	<a href = "LOGO/LogoReflection.html">
+	<img src="LOGO/OhlLogoFin.jpg" ,="" width="70%"> </a>
             
         </td>
         <td>
