--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
 	<a href = "CORDHOLDER/CordCatcherReflection.html">
            <img src="CORDHOLDER/FINAL%20RASTER%20AND%20CUT%20OBJECT.jpeg" ,="" width="70%">          
         </td>
-        <td></td>
+        <td>
+	<h3> TEARDOWN REFLECTION </h3>
+	<a href = "CORDHOLDER/CordCatcherReflection.html">
+           <img src="master/TEARDOWNREFLECTION.jpeg" ,="" width="70%">		
+	</td>
+	<td>
+	<h3> ATARI SYNTHESIZER </h3>
+	<a href = "CORDHOLDER/CordCatcherReflection.html">
+           <img src="CORDHOLDER/FINAL%20RASTER%20AND%20CUT%20OBJECT.jpeg" ,="" width="70%">
+	</td>	
       </tr>
     </tbody></table>
 
