--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <td>
 	<h3> TEARDOWN REFLECTION </h3>
 	<a href = "CORDHOLDER/CordCatcherReflection.html">
-           <img src="master/TEARDOWNREFLECTION.jpeg" ,="" width="70%">		
+           <img src="TEARDOWNREFLECTION.jpeg" ,="" width="70%">		
 	</td>
 	<td>
 	<h3> ATARI SYNTHESIZER </h3>
