--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<td>
 	<h3> ATARI SYNTHESIZER </h3>
 	<a href = "CORDHOLDER/CordCatcherReflection.html">
-           <img src="CORDHOLDER/FINAL%20RASTER%20AND%20CUT%20OBJECT.jpeg" ,="" width="70%">
+           <img src="BREADBOARDPIC.jpeg" ,="" width="70%">
 	</td>	
       </tr>
     </tbody></table>
