--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	</td>
 	<td>
 	<h3> ATARI SYNTHESIZER </h3>
-	<a href = "CORDHOLDER/CordCatcherReflection.html">
+	<a href = "Breadboard%20and%20Perf-board%20Reflection">
            <img src="BREADBOARDPIC.jpeg" ,="" width="70%">
 	</td>	
       </tr>
