--- a/LOGO/LogoReflection.html
+++ b/LOGO/LogoReflection.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<a href = "CORDHOLDER/index.html"> <h1> HOME </h1> <a/>
+<a href = "../index.html"> <h1> HOME </h1> <a/>
 
 <iframe src="https://docs.google.com/document/d/e/2PACX-1vS4Wmg0gG4AXNFaJqqeNPGexjzesUsXlRaweFWW1bnXDiPxTzTAS9xEEv9rYmss5h_7zm8qhO6CITWn/pub?embedded=true"></iframe>
 
