--- a/AtariSynthesizer/AtariReflection.html
+++ b/AtariSynthesizer/AtariReflection.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-<h1> HOME </h1> </a>
+<a href = "../index.html"> <h1> HOME </h1> <a/>
 
 <iframe src="https://docs.google.com/document/d/e/2PACX-1vReo7PyVlCLAxSl8sbqzVqR8hSnqwHz90NbbvZnNxxUqRZjUmqEEvhIENk3wXekSGKqtCEXCscNd5Df/pub?embedded=true"></iframe>
 </body>
