--- a/CORDHOLDER/CordCatcherReflection.html
+++ b/CORDHOLDER/CordCatcherReflection.html
@@ -21,8 +21,8 @@
 </head>
 <body>
 
-<a href = "CORDHOLDER/index.html"> <h1> HOME </h1> </a>
-
+<a href = "../index.html"> <h1> HOME </h1> <a/>
+ 
 <iframe src="https://docs.google.com/document/d/e/2PACX-1vT8RHMsDbEjFjp0r8uUPQPOS22QRn0_qxsIY8ccSyuIM8RN2PVI_pkBl4HOjaBm6eij9j4vzB2khF4x/pub?embedded=true"></iframe>
 
 </body>
