--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </td>
         <td>
           <h3> PRESS-FIT BOX </h3>
-	<a href = "PressFitBoxReflection.html">
+	<a href = "PressFitBox/PressFitBoxReflection.html">
  <img src="PressFitBox/FinalBox.jpg" ,="" width="70%">
         </td>
         <td>
