--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 	<a href = "AtariSynthesizer/AtariReflection.html">
            <img src="BREADBOARDPIC.jpeg" ,="" width="70%">
 	</td>	
+	<td>
+	<h3> Candyland Reflection </h3>
+	<a href = "Candylandreflection.html">
+           <img src="Candyland.jpg" ,="" width="70%">
+	</td>	
       </tr>
     </tbody></table>
 
